--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
+            <h1>Sai Poojitha Gundapaneni</h1>
+            <h2>Full Stack Java Developer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -72,10 +72,11 @@
                     <h2 class="heading">About Me</h2>
                 </div>
                 <div class="col-md-8">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                    <p>With over 6 years of experience, I excel as a Full Stack Java Developer, adept in Java 11, React, and JavaScript.
+			    I specialize in crafting scalable full-stack applications, with expertise in MongoDB and MySQL database management for efficient data handling. 
+			    Proficient in RESTful API creation and Kafka for real-time data streaming, I ensure seamless communication and system responsiveness. My AWS proficiency optimizes performance, while Docker and Kubernetes streamline deployment.
+			    Through Jenkins pipelines, I expedite software releases, maintaining high code quality with JUnit and Mockito. As a collaborative team player, I provide mentorship, leveraging Java Spring, Spring Boot, and Angular for a cohesive full-stack experience,
+			    integrating MySQL and MongoDB for data integrity. Dedicated to staying updated on industry trends, I incorporate emerging technologies to enhance project outcomes.
                     </p>
                 </div>
             </div>
@@ -86,27 +87,42 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="August 2022 – Current">
+                <h3>Western Union</h3>
+                <h4>Full Stack Developer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                   I led the design and development of scalable full-stack applications using Java 11, React, and JavaScript. Maintained MongoDB and MySQL databases for optimized efficiency. 
+		   Created RESTful APIs for seamless frontend-backend communication. Utilized Kafka for real-time data streaming and AWS for deployment, leveraging EC2, S3, and Lambda for performance. 
+		   Containerized with Docker and orchestrated via Kubernetes for streamlined deployment. Implemented Jenkins pipelines for continuous integration, reducing time-to-market. Conducted thorough unit testing with JUnit and Mockito. 
+	           Collaborated cross-functionally, providing mentorship to foster an innovative team culture.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="February 2021 – July 2022">
+                <h3>Home Depot</h3>
+                <h4>Full Stack Developer </h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    I developed and maintained Java-based full-stack applications, ensuring seamless integration between frontend and backend components using Java 11, React, and JavaScript. Implemented MongoDB and MySQL databases for efficient data handling and designed RESTful APIs for smooth communication. Integrated Kafka for real-time event-driven architecture, enhancing system responsiveness. Deployed applications on AWS for optimized performance and scalability. Utilized Docker for containerization and Kubernetes for efficient deployment. Automated build and deployment processes with Jenkins, reducing errors and improving speed. 
+		    Conducted unit testing with JUnit and Mockito to ensure high code quality. Collaborated with cross-functional teams to meet client needs.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="November 2019 – January 2021">
+                <h3>Crothall Healthcare Inc.</h3>
+                <h4>J2EE/EJB Developer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Focused on backend development using Java Spring and Spring Boot frameworks, optimizing server-side functionality. Utilized Angular for frontend development, ensuring a cohesive full-stack experience. 
+		    Implemented robust RESTful APIs for efficient communication between systems, leveraging MySQL and MongoDB for data integrity. Collaborated cross-functionally for seamless integration, conducted unit testing, and participated in code reviews to ensure high code quality. C
+		    ontributed to scalable backend system design, provided technical support, and stayed updated on industry trends for incorporating relevant advancements into development processes.
+                </p>
+            </div>
+		 <div data-date="March 2018 – October 2019">
+                <h3>MindMade Technologies</h3>
+                <h4>Java Developer </h4>
+                <p>
+                   Developed Java applications with frontend and backend technologies, enhancing a diverse skill set. Implemented RESTful APIs for seamless communication, managing data efficiently with MySQL and MongoDB. 
+		   Conducted unit testing for code reliability, collaborated with teams for feature development, and provided production support. Participated in code reviews, fostering continuous improvement, and maintained documentation for codebase and architecture. 
+	           Contributed to database query optimization for better performance and stayed updated on Java advancements for enhanced project outcomes.
                 </p>
             </div>
         </div>
