--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Sai Poojitha Gundapaneni</h1>
             <h2>Full Stack Java Developer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href=""C:\Users\saipo\Downloads\SAIPOOJITHA_GUNDAPANENI_Resume_4 (3).docx"" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
